--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <p id="description">
       Thank you for taking the time to help us improve the platform
     </p>
+    <form id="survey-form">
+      <input id="name" type="text">
+    </form>
+    
   </body>
 </html>
