--- a/index.html
+++ b/index.html
@@ -12,26 +12,115 @@
     <p id="description">
       Thank you for taking the time to help us improve the platform
     </p>
+
+    <!-- Form -->
+
     <form id="survey-form">
-      <label for="name_label">Name</label>
-      <input id="name" type="text" placeholder="Enter Your Name" />
-      <label for="email_label">Email</label>
+      <!-- Name -->
+      <label for="name_label">Name</label><br />
+      <input id="name" type="text" placeholder="Enter Your Name" /><br />
+
+      <!-- Email -->
+      <label for="email_label">Email</label><br />
       <input
         id="email"
         type="email"
         placeholder="Enter Your Email"
         pattern=".+@globex\.com"
-      />
-      <label for="number_label">Age</label>
-      <input id="number" type="number" placeholder="Age" pattern="\d*" max=100 min=0/>
-      <label for="dropdown_label>Which option best describes your current role?</label>
+      /><br />
+
+      <!-- Age -->
+      <label for="number_label">Age</label><br />
+      <input
+        id="number"
+        type="number"
+        placeholder="Age"
+        pattern="\d*"
+        max="100"
+        min="0"
+      /><br />
+
+      <!-- Dropdown menu -->
+      <label for="dropdown_label"
+        >Which option best describes your current role?"</label
+      ><br />
       <select name="dropdown" id="dropdown" placeholder="Select current role">
-      <option value="student">Student</option>
-      <option value="fullTimeJob">Full Time Job</option>
-    <option value="fullTimeLearner">Full Time Learner</option>
-    <option value="preferNotToSay">Prefer not to say</option>
-    <option value="Other">Other</option>
-     </select>
+        <option value="student">Student</option>
+        <option value="fullTimeJob">Full Time Job</option>
+        <option value="fullTimeLearner">Full Time Learner</option>
+        <option value="preferNotToSay">Prefer not to say</option>
+        <option value="Other">Other</option></select
+      ><br />
+
+      <!-- Radio Buttons -->
+
+      <label for="radio_label"
+        >Would you recommend freeCodeCamp to a friend?</label
+      ><br />
+      <input type="radio" name="recommend" value="definitely" />
+      <label for="definitely">Definitely</label><br />
+      <input type="radio" name="recommend" value="maybe" />
+      <label for="maybe">Maybe</label><br />
+      <input type="radio" name="recommend" value="notSure" />
+      <label for="notSure">Not Sure</label><br />
+
+      <!-- Checkboxes -->
+
+      <label for="checkboxes"
+        >What would you like to see improved? (Check all that apply)</label
+      ><br />
+      <input
+        type="checkbox"
+        id="improvements1"
+        name="frontEnd"
+        value="front-end"
+      />
+      <label for="front-end">Front-end Projects</label><br />
+      <input
+        type="checkbox"
+        id="improvements2"
+        name="back-end"
+        value="back-end"
+      />
+      <label for="backEnd">Back-end Projects</label><br />
+      <input
+        type="checkbox"
+        id="improvements3"
+        name="data-vis"
+        value="data-vis"
+      />
+      <label for="data-vis">Data Visualization</label><br />
+      <input
+        type="checkbox"
+        id="improvements4"
+        name="challenges"
+        value="challenges"
+      />
+      <label for="challenges">Challenges</label><br />
+      <input
+        type="checkbox"
+        id="improvements5"
+        name="openSource"
+        value="openSource"
+      />
+      <label for="openSource">Open Source Community</label><br />
+      <input type="checkbox" id="improvements6" name="gitter" value="gitter" />
+      <label for="gitter">Gitter help rooms</label><br />
+      <input type="checkbox" id="improvements7" name="videos" value="videos" />
+      <label for="videos">Videos</label><br />
+      <input type="checkbox" id="improvements8" name="meet" value="meet" />
+      <label for="meet">City Meetups</label><br />
+      <input type="checkbox" id="improvements9" name="wiki" value="wiki" />
+      <label for="wiki">Wiki</label><br />
+      <input type="checkbox" id="improvements10" name="forum" value="forum" />
+      <label for="forum">Forum</label><br />
+      <input
+        type="checkbox"
+        id="improvements11"
+        name="addCourses"
+        value="addCourses"
+      />
+      <label for="addCourses">Additional Courses</label><br />
     </form>
   </body>
 </html>
