--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
         value="addCourses"
       />
       <label for="addCourses">Additional Courses</label><br />
+      <label for="anyComments">Comments</label><br /
+      <textarea type="text" id="comments" placeholder="Enter your comment here" rows="4" colums="50"/></textarea>
+    <button id="submit">Submit</button>
     </form>
   </body>
 </html>
