--- a/index.html
+++ b/index.html
@@ -121,9 +121,14 @@
         value="addCourses"
       />
       <label for="addCourses">Additional Courses</label><br />
-      <label for="anyComments">Comments</label><br /
-      <textarea type="text" id="comments" placeholder="Enter your comment here" rows="4" colums="50"/></textarea>
+
+      <!-- Comments -->
+      <label for="anyComments">Comments</label><br>
+      <textarea type="text" id="comments" placeholder="Enter your comment here" rows="4" colums="50"/></textarea><br>
+
+      <!-- Submit -->
     <button id="submit">Submit</button>
+
     </form>
   </body>
 </html>
